fix: solve align

--- a/portfolio/src/pages/Main/styles.css
+++ b/portfolio/src/pages/Main/styles.css
@@ -20,6 +20,16 @@
   font-family: "Poppins", sans-serif;
   border-bottom: 2px solid rgba(255, 255, 255, 0.18);
 }
+
+.profile_introduction {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+
+  width: 100%;
+  min-height: 100%;
+}
+
 .icon-page {
   width: 40%;
   filter: drop-shadow(8px 8px 10px #090f2c);
@@ -55,8 +65,9 @@
 .about-quote {
   display: flex;
   flex-direction: column;
-  align-items: flex-end;
-  justify-content: flex-end;
+  justify-content: end;
+  width: 100%;
+  height: 100%;
   gap: 0.5rem;
   font-family: "Inter Tight", sans-serif;
   color: var(--grey-primary);
